--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -103,11 +103,13 @@
                         app:boxStrokeWidth="2dp"
                         style="@style/WhiteTextInputLayout">
 
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
                             android:id="@+id/actvFrom"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="none"
+                            android:inputType="textCapWords"
+                            android:focusable="true"
+                            android:clickable="true"
                             android:textColor="@color/white"
                             android:textColorHint="@color/white" />
                     </com.google.android.material.textfield.TextInputLayout>
@@ -136,11 +138,13 @@
                         android:layout_marginTop="8dp"
                         style="@style/WhiteTextInputLayout">
 
-                        <com.google.android.material.textfield.TextInputEditText
+                        <AutoCompleteTextView
                             android:id="@+id/actvTo"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="none"
+                            android:inputType="textCapWords"
+                            android:focusable="true"
+                            android:clickable="true"
                             android:textColor="@color/white"
                             android:textColorHint="@color/white" />
                     </com.google.android.material.textfield.TextInputLayout>
